[tool.poetry]
name = "textfsm_aos"
version = "1.1.3"
description = "Alcatel-Lucent Enterprise AOS CLI parsing (TextFSM)"
authors = ["Jef Vantongerloo <jefvantongerloo@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jefvantongerloo/textfsm-aos"
homepage = "https://github.com/jefvantongerloo/textfsm-aos"
keywords = ["network automation", "textfsm", "scraping", "Alcatel-Lucent Enterprise", "infrastructure"]

[tool.poetry.dependencies]
python = ">=3.8"
textfsm = "^1.1.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
textfsm = "^1.1.0"
PyYAML = "^6.0"
tox = "^4.6.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
