[tool.poetry]
name = "textfsm_aos"
version = "1.1.3"
description = "Alcatel-Lucent Enterprise AOS CLI parsing (TextFSM)"
authors = ["Jef Vantongerloo <jefvantongerloo@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jefvantongerloo/textfsm-aos"
homepage = "https://github.com/jefvantongerloo/textfsm-aos"
keywords = ["network automation", "textfsm", "scraping", "Alcatel-Lucent Enterprise", "infrastructure"]

[tool.poetry.dependencies]
python = ">=3.12"
textfsm = "^2.1.0"
PyYAML = "^6.0"
pytest = { version = "^9.0.2", optional = true }

[tool.poetry.group.dev.dependencies]
tox = "^4.38.0"
pytest = "^9.0.2"

[tool.poetry.extras]
dev = ["pytest", "setuptools"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
